--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -8,6 +8,8 @@ if (not env_etc.no_boost_python):
     target="#lib/iotbx_pdb_ext",
     source=[
       "ext.cpp",
+      "hybrid_36_bpl.cpp",
+      "hybrid_36_c.c",
       "common_residue_names_bpl.cpp",
       "hierarchy_bpl.cpp",
       "input_bpl.cpp",
