--- a/boost_adaptbx/SConscript
+++ b/boost_adaptbx/SConscript
@@ -1,6 +1,6 @@
 import libtbx.load_env
 from libtbx.str_utils import show_string
-import md5
+from libtbx.utils import warn_if_unexpected_md5_hexdigest
 import string
 import sys, os
 Import("env_base", "env_etc")
@@ -132,17 +132,11 @@ if (not env_etc.no_boost_python):
   else:
     env.SharedLibrary(target="#lib/boost_python", source=bpl_dll_sources)
   if (int(ARGUMENTS.get("boost_python_tests", 0))):
-    jamfile_path = libtbx.env.under_dist("boost","libs/python/test/Jamfile.v2")
-    jamfile = "\n".join(open(jamfile_path).read().splitlines())
-    m = md5.new()
-    m.update(jamfile)
-    # based on boost/libs/python/test/Jamfile.v2 revision 1.24
-    jamfile_md5 = "392272a7eb1eefa2a7b39760328d9eea"
-    if (m.hexdigest() != jamfile_md5):
-      print "******************************************************"
-      print "Warning: boost/libs/python/test/Jamfile.v2 has changed"
-      print "New md5 signature:", m.hexdigest()
-      print "******************************************************"
+    warn_if_unexpected_md5_hexdigest(
+      path=libtbx.env.under_dist("boost", "libs/python/test/Jamfile.v2"),
+      expected_md5_hexdigests=[
+        "392272a7eb1eefa2a7b39760328d9eea", # revision 1.24
+      ])
     if (env_etc.compiler in ["irix_CC", "tru64_cxx"]):
       disabled = "#"
     else:
