--- a/boost_adaptbx/SConscript
+++ b/boost_adaptbx/SConscript
@@ -81,7 +81,7 @@ if (not env_etc.no_boost_python):
     paths=[env_etc.boost_include, env_etc.python_include])
 
   if (env_etc.compiler == "darwin_c++"):
-    if (env_etc.mac_os_version == "10.3"):
+    if (env_etc.mac_cpu == "powerpc"):
       dylib1 = "-ldylib1.o "
     else:
       dylib1 = ""
