correct file restored

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+cctbx/dox/rst/python_cpp_mix.png -text
 libtbx/libtbx/sourceforge_checkout.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
