- Add to cctbx.xray.target_functors a new class unified_least_squares_residual handling F and F^2 refinement as well as weighting schemes - Inherit the good ol' least_squares_residual from it - No existing tests broken - Add tests for F^2 - Next step: add tests for weighting schemes and add more of them

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+cctbx/cctbx/xray/weighting_schemes.py -text
 cctbx/dox/rst/python_cpp_mix.png -text
 libtbx/libtbx/command_line/find_files.py -text
 libtbx/libtbx/command_line/list_files.py -text
