--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -165,12 +165,27 @@ if (sys.platform == "win32"):
     raise RuntimeError("Unknown compiler choice: %s" % env_etc.compiler)
 else:
   env_etc.mac_cpu = None
+  env_etc.mac_cpu_is_g4 = None
   env_etc.mac_os_version = None
   if (sys.platform.startswith("darwin")):
     env_etc.mac_cpu = easy_run.fully_buffered(
       command="/usr/bin/uname -p") \
       .raise_if_errors() \
       .stdout_lines[0].strip()
+    def mac_cpu_is_g4():
+      if (env_etc.mac_cpu != "powerpc"): return False
+      lines = easy_run.fully_buffered(
+        command="/usr/sbin/system_profiler SPHardwareDataType") \
+        .raise_if_errors() \
+        .stdout_lines
+      for line in lines:
+        line = line.strip()
+        if (line.startswith("Machine Model: ")):
+          if (line.find(" G4 ") > 0 or line.endswith(" G4")):
+            return True
+          break
+      return False
+    env_etc.mac_cpu_is_g4 = mac_cpu_is_g4()
     env_etc.mac_os_version = ".".join(easy_run.fully_buffered(
       command="/usr/bin/sw_vers -productVersion")
       .raise_if_errors()
@@ -486,6 +501,10 @@ else:
       opts = ["-DNDEBUG", "-O3", "-ffast-math"]
       if (cxx_version == "4.0.0"):
         opts[1] = "-O2" # Apple's optimizer is broken
+      elif (libtbx.env.build_options.max_optimized):
+        opts[1] = "-fast"
+        if (env_etc.mac_cpu_is_g4):
+          opts.insert(1, "-mcpu=G4")
     else:
       opts = ["-O0", "-fno-inline"]
     if (libtbx.env.build_options.debug_symbols):
