--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,6 @@ cctbx/dox/rst/python_cpp_mix.png -text
 libtbx/libtbx/command_line/find_files.py -text
 libtbx/libtbx/command_line/list_files.py -text
 libtbx/libtbx/sourceforge_checkout.py -text
+libtbx/libtbx/subversion.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
