--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ libtbx/libtbx/sourceforge_checkout.py -text
 libtbx/libtbx/subversion.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
+mmtbx/mmtbx/xmanip.py -text
 smtbx/__init__.py -text
 smtbx/refinement/__init__.py -text
 smtbx/refinement/minimization.py -text
