new set of routines needed for xmanip. Basic manpulations implemented so far include: 1) get_dano. Returns | |F+|-|F-| |. usefull for generating anomalous difference maps.  2) get_diso. Returns |Fder|-|Fnat|. Usefull for isomorphous difference maps. 3) lsq_scale. Least squares scaling of data. Extending functionality is relatively straightforward. Current wish list includes: 1) importing and extending free flags. 2) most manipulation functionality of iotbx.reflection_file_converter

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ libtbx/libtbx/subversion.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
 mmtbx/mmtbx/xmanip.py -text
+mmtbx/mmtbx/xmanip_tasks.py -text
 smtbx/__init__.py -text
 smtbx/refinement/__init__.py -text
 smtbx/refinement/minimization.py -text
