- add the alternative test of setting the state of random.random as it was before the generation of the structure crashing tst_xray_minimization and then running tst_xray_minimization.exercise

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+cctbx/cctbx/regression/random_generator_state.pickle -text
 cctbx/cctbx/regression/structure_ideal.pickle -text
 cctbx/cctbx/regression/structure_start.pickle -text
 cctbx/cctbx/regression/tst_weighting_schemes.py -text
