- add a bund of tests: only tst_minimization_at_random.py, a shameful copy of cctbx.regression.tst_xray_minimization, does anything - note: the latter has the following tweaks compared to the original: 	+ if the assert for the correlation fails, the same test is executed twice with 2 new random structures and they pass, the assertion error is considered harmless; the idea is to avoid flukes 	+ the script takes more command lines argument to choose whether to do F or F^2 or special position constraints or not; instead of doing more inner loops to do all cases

--- a/.gitattributes
+++ b/.gitattributes
@@ -32,3 +32,8 @@ smtbx/refinement/minimization.cpp -text
 smtbx/refinement/minimization.h -text
 smtbx/refinement/minimization.py -text
 smtbx/refinement/refinement_ext.cpp -text
+smtbx/refinement/tests/6-ring-twist-disorder.hkl -text
+smtbx/refinement/tests/6-ring-twist-disorder.res -text
+smtbx/refinement/tests/__init__.py -text
+smtbx/refinement/tests/tst_minimization.py -text
+smtbx/refinement/tests/tst_minimization_at_random.py -text
