--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,9 @@ libtbx/libtbx/sourceforge_checkout.py -text
 libtbx/libtbx/subversion.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
+mmtbx/mmtbx/command_line/maps.py -text
 mmtbx/mmtbx/command_line/xmanip.py -text
+mmtbx/mmtbx/maps.py -text
 mmtbx/mmtbx/xmanip.py -text
 mmtbx/mmtbx/xmanip_tasks.py -text
 smtbx/SConscript -text
