--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 cctbx/cctbx/regression/random_generator_state.pickle -text
 cctbx/cctbx/regression/structure_ideal.pickle -text
 cctbx/cctbx/regression/structure_start.pickle -text
+cctbx/cctbx/regression/tst_adp_constraints_cartesian.py -text
 cctbx/cctbx/regression/tst_weighting_schemes.py -text
 cctbx/cctbx/regression/tst_xray_minimization_failure.py -text
 cctbx/cctbx/xray/weighting_schemes.py -text
