--- a/cctbx/SConscript
+++ b/cctbx/SConscript
@@ -128,3 +128,4 @@ if (not env_etc.no_boost_python):
   SConscript("include/cctbx/crystal/SConscript")
   SConscript("include/cctbx/geometry_restraints/SConscript")
   SConscript("include/cctbx/adp_restraints/SConscript")
+  SConscript("error/SConscript")
