--- a/scitbx/SConscript
+++ b/scitbx/SConscript
@@ -10,6 +10,7 @@ env_etc.scitbx_common_includes = [
   env_etc.boost_include,
 ]
 
+SConscript("error/SConscript")
 SConscript("include/scitbx/slatec/SConscript")
 SConscript("array_family/SConscript")
 SConscript("serialization/SConscript")
