- refactor the exception business for the scitbx, cctbx and mmtbx: + scitbx defines the template smart_error and the macros which takes care of all the machinery + the error headers in the scitbx, cctbx and mmtbx are just pure boiler plate
- the machinery in smart_error relies entirely on std::ostringstream and a stupid bug is corrected in what()

--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,7 @@ mmtbx/mmtbx/xmanip_tasks.py -text
 scitbx/error/SConscript -text
 scitbx/error/tst_error.cpp -text
 scitbx/include/scitbx/matrix/delta_tensors.h -text
+scitbx/include/scitbx/smart_error.h -text
 scitbx/scitbx/graph/__init__.py -text
 scitbx/scitbx/graph/rigidity.py -text
 scitbx/scitbx/graph/tst_rigidity.py -text
