--- a/.gitattributes
+++ b/.gitattributes
@@ -31,8 +31,9 @@ mmtbx/mmtbx/xmanip.py -text
 mmtbx/mmtbx/xmanip_tasks.py -text
 scitbx/error/SConscript -text
 scitbx/error/tst_error.cpp -text
+scitbx/include/scitbx/error_utils.h -text
 scitbx/include/scitbx/matrix/delta_tensors.h -text
-scitbx/include/scitbx/smart_error.h -text
+scitbx/scitbx/command_line/generate_error_h.py -text
 scitbx/scitbx/graph/__init__.py -text
 scitbx/scitbx/graph/rigidity.py -text
 scitbx/scitbx/graph/tst_rigidity.py -text
