--- a/.gitattributes
+++ b/.gitattributes
@@ -7,8 +7,6 @@ cctbx/cctbx/regression/tst_weighting_schemes.py -text
 cctbx/cctbx/regression/tst_xray_minimization_failure.py -text
 cctbx/cctbx/xray/weighting_schemes.py -text
 cctbx/dox/rst/python_cpp_mix.png -text
-cctbx/error/SConscript -text
-cctbx/error/tst_error.cpp -text
 cctbx/include/cctbx/maptbx/fft.h -text
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 libtbx/libtbx/command_line/bash.sh -text
@@ -31,6 +29,7 @@ mmtbx/mmtbx/xmanip.py -text
 mmtbx/mmtbx/xmanip_tasks.py -text
 scitbx/error/SConscript -text
 scitbx/error/tst_error.cpp -text
+scitbx/error/tst_error.py -text
 scitbx/include/scitbx/error_utils.h -text
 scitbx/include/scitbx/matrix/delta_tensors.h -text
 scitbx/scitbx/command_line/generate_error_h.py -text
