--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,7 @@ libtbx/windows_dispatcher.exe -text
 mmtbx/mmtbx/command_line/maps.py -text
 mmtbx/mmtbx/command_line/xmanip.py -text
 mmtbx/mmtbx/maps.py -text
+mmtbx/mmtbx/pdbtools.py -text
 mmtbx/mmtbx/utils.py -text
 mmtbx/mmtbx/xmanip.py -text
 mmtbx/mmtbx/xmanip_tasks.py -text
