found not to compile with VS 7.1, so disable it while fixing the problem

--- a/scitbx/sparse/examples/Sconscript
+++ b/scitbx/sparse/examples/Sconscript
@@ -10,4 +10,4 @@ envlm = env.Copy(
   LIBS=env_etc.libm
 )
 
-env.Program(target="tst_sparse", source="tst_sparse.cpp")
+# env.Program(target="tst_sparse", source="tst_sparse.cpp")
