--- a/boost_adaptbx/SConscript
+++ b/boost_adaptbx/SConscript
@@ -11,6 +11,9 @@ env_etc.boost_adaptbx_include = os.path.dirname(env_etc.boost_adaptbx_dist)
 if (not env_etc.no_boost_python):
   env_etc.cxxflags_bpl_defines_base = [
     "-DBOOST_ALL_NO_LIB", "-DBOOST_PYTHON_MAX_BASES=2"]
+  if (libtbx.env.build_options.boost_python_no_py_signatures):
+    env_etc.cxxflags_bpl_defines_base.append(
+      "-DBOOST_PYTHON_NO_PY_SIGNATURES")
   env_no_includes_boost_python_ext = env_base.Copy(
     CXXFLAGS=env_etc.cxxflags_base,
     CCFLAGS=env_etc.ccflags_base,
