Highly optimized dictionary of RNA/DNA atom name aliases.

--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -11,6 +11,7 @@ if (not env_etc.no_boost_python):
       "hybrid_36_bpl.cpp",
       "hybrid_36_c.c",
       "common_residue_names_bpl.cpp",
+      "rna_dna_atom_names_bpl.cpp",
       "hierarchy_bpl.cpp",
       "input_bpl.cpp",
       "xray_structure_bpl.cpp"])
