--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,8 @@ cctbx/cctbx/xray/weighting_schemes.py -text
 cctbx/dox/rst/python_cpp_mix.png -text
 cctbx/global/error.cpp -text
 cctbx/include/cctbx/maptbx/fft.h -text
+iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
+iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/shelx/fcf.py -text
 libtbx/libtbx/command_line/bash.sh -text
