new rna_dna_atom_names_reference_to_mon_lib_translation_dict, rna_dna_atom_names_interpretation.mon_lib_names(); comprehensive tests of mon_lib and cns rna/dna atom name interpretation (moved to separate new file)

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ cctbx/global/error.cpp -text
 cctbx/include/cctbx/maptbx/fft.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
+iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/shelx/fcf.py -text
 libtbx/libtbx/command_line/bash.sh -text
