comprehensive test of interpretation of protein residues of all types, PDB-V2 and PDB-V3, chain, n-term, c-term, with all hydrogens

--- a/.gitattributes
+++ b/.gitattributes
@@ -40,6 +40,7 @@ mmtbx/mmtbx/command_line/pdbtools.py -text
 mmtbx/mmtbx/command_line/xmanip.py -text
 mmtbx/mmtbx/maps.py -text
 mmtbx/mmtbx/model_statistics.py -text
+mmtbx/mmtbx/monomer_library/tst_protein_interpretation.py -text
 mmtbx/mmtbx/monomer_library/tst_rna_dna_interpretation.py -text
 mmtbx/mmtbx/pdb_header.py -text
 mmtbx/mmtbx/pdbtools.py -text
