show TAG, cctbx_bundle_TAG, or libtbx.env.command_version_suffix

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ cbflib_adaptbx/include/cbflib_adaptbx/basic.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/cbf_adaptor.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/mar_adaptor.h -text
 cbflib_adaptbx/libtbx_config -text
+cctbx/cctbx/command_line/version.py -text
 cctbx/cctbx/regression/random_generator_state.pickle -text
 cctbx/cctbx/regression/structure_ideal.pickle -text
 cctbx/cctbx/regression/structure_start.pickle -text
