top-level read support for CBF data files

--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@ iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
+iotbx/iotbx/detectors/cbf.py -text
 iotbx/iotbx/shelx/fcf.py -text
 libtbx/libtbx/command_line/bash.sh -text
 libtbx/libtbx/command_line/csh.sh -text
