- isosurface computation: class usable in pure C++, Python wrapper, test cases

--- a/cctbx/maptbx/boost_python/SConscript
+++ b/cctbx/maptbx/boost_python/SConscript
@@ -14,4 +14,5 @@ env.SharedLibrary(target="#lib/cctbx_maptbx_ext", source=[
   "mapper.cpp",
   "basic_map.cpp",
   "real_space_refinement.cpp",
+  "iso_surface.cpp",
 ])
