--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ cbflib_adaptbx/include/cbflib_adaptbx/cbf_adaptor.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/mar_adaptor.h -text
 cbflib_adaptbx/libtbx_config -text
 cctbx/cctbx/command_line/version.py -text
+cctbx/cctbx/maptbx/tst_iso_surface.py -text
 cctbx/cctbx/regression/random_generator_state.pickle -text
 cctbx/cctbx/regression/structure_ideal.pickle -text
 cctbx/cctbx/regression/structure_start.pickle -text
@@ -20,6 +21,8 @@ cctbx/cctbx/xray/weighting_schemes.py -text
 cctbx/dox/rst/python_cpp_mix.png -text
 cctbx/global/error.cpp -text
 cctbx/include/cctbx/maptbx/fft.h -text
+cctbx/include/cctbx/maptbx/iso_surface.h -text
+cctbx/maptbx/boost_python/iso_surface.cpp -text
 gltbx/command_line/pythonw.sh -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
