Simple example of how to use module wx_viewer

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ cctbx/dox/rst/python_cpp_mix.png -text
 cctbx/global/error.cpp -text
 cctbx/include/cctbx/maptbx/fft.h -text
 gltbx/command_line/pythonw.sh -text
+gltbx/wx_viewer_example.py -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
