new command line tool to convert reflection cif file into mtz

--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,7 @@ gltbx/wx_viewer_example.py -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
+iotbx/iotbx/command_line/cif_as_mtz.py -text
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/detectors/cbf.py -text
 iotbx/iotbx/shelx/fcf.py -text
