add binary_operator_traits<U, F> and <F,U> for U being any unsigned integral type and F being float or double; add a test

--- a/scitbx/array_family/SConscript
+++ b/scitbx/array_family/SConscript
@@ -28,3 +28,5 @@ envlm.Program(target="tst_mat3", source="tst_mat3.cpp")
 envlm.Program(target="tst_sym_mat3", source="tst_sym_mat3.cpp")
 env.Program(target="tst_mat_ref", source="tst_mat_ref.cpp")
 env.Program(target="tst_accessors", source="tst_accessors.cpp")
+env.Program(target="tst_unsigned_float_arithmetic",
+            source="tst_unsigned_float_arithmetic.cpp")
