new command libtbx.show_environ_usage

--- a/.gitattributes
+++ b/.gitattributes
@@ -38,6 +38,7 @@ libtbx/libtbx/command_line/find_files.py -text
 libtbx/libtbx/command_line/list_files.py -text
 libtbx/libtbx/command_line/nequal.py -text
 libtbx/libtbx/command_line/sh.sh -text
+libtbx/libtbx/command_line/show_environ_usage.py svneol=native#text/x-python
 libtbx/libtbx/command_line/tcsh.sh -text
 libtbx/libtbx/sourceforge_checkout.py -text
 libtbx/libtbx/subversion.py -text
