--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 * text=auto !eol
+boost_adaptbx/boost/command_line/divide_by_zero.py svneol=native#text/x-python
+boost_adaptbx/boost/command_line/show_environ_usage.py svneol=native#text/x-python
 cbflib_adaptbx/SConscript -text
 cbflib_adaptbx/detectors/boost_python/SConscript -text
 cbflib_adaptbx/detectors/boost_python/cbflib_ext.cpp -text
