--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,7 @@ iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/detectors/cbf.py -text
 iotbx/iotbx/pdb/extract_rfactors_resolutions_sigma.py -text
+iotbx/iotbx/pdb/hy36.java svneol=native#text/plain
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/shelx/fcf.py -text
 libtbx/libtbx/command_line/bash.sh -text
